updating the readme and regression naming to refine labeling/communication for usablity.

--- a/VIIRS_2_IntChl_regression_model.ipynb
+++ b/VIIRS_2_IntChl_regression_model.ipynb
@@ -300,8 +300,6 @@
     "for l in l_range:\n",
     "    for neuron in neurons:\n",
     "        \n",
-    "#         print(l)\n",
-    "#         print(neuron)\n",
     "        print(f\"Combination: {l} layers with {neuron} neurons.\") \n",
     "        model = MLPRegressor(hidden_layer_sizes=(neuron,)*l, random_state=4, max_iter=10000)\n",
     "        model.fit(X_train, y_train)\n",
@@ -309,8 +307,7 @@
     "        \n",
     "        scores = r2_score(y_test,y_pred)\n",
     "        scores_list.append(r2_score(y_test,y_pred))\n",
-    "        nidx.append(l+(neuron)/10))\n",
-    "        # show the confusion matrix for each combination    \n"
+    "        nidx.append(l+(neuron)/10)) \n"
    ]
   },
   {
