--- a/VIIRS_2_IntChl_regression_model.ipynb
+++ b/VIIRS_2_IntChl_regression_model.ipynb
@@ -142,7 +142,9 @@
     "    k.append(n)\n",
     "    r2_train.append(r2_score(y_train, model.predict(standardized_X)))\n",
     "    r2_test.append(r2_score(y_test, y_pred))\n",
-    "    RMSE.append(np.sqrt(mean_squared_error(y_test, y_pred)))\n"
+    "    RMSE.append(np.sqrt(mean_squared_error(y_test, y_pred)))\n",
+    "\n",
+    "    \n"
    ]
   },
   {
