--- a/VIIRS_2_IntChl_regression_model.ipynb
+++ b/VIIRS_2_IntChl_regression_model.ipynb
@@ -150,6 +150,18 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "b70c02e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_out_knn = pd.DataFrame(data=[k,r2_test])\n",
+    "df_out_knn.head\n",
+    "df_out_knn.to_csv('/Users/frank/Documents/classes/env.datascience_clayton/capstone/knn_out.csv')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "b1317fcc",
    "metadata": {},
    "outputs": [
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "11d232ab",
    "metadata": {},
    "outputs": [],
@@ -197,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "440faed7",
    "metadata": {},
    "outputs": [
@@ -207,7 +219,7 @@
        "MLPRegressor(hidden_layer_sizes=(10, 10, 10), max_iter=1000, random_state=10)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6cdc4484",
    "metadata": {},
    "outputs": [],
@@ -233,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9c2ce5d1",
    "metadata": {},
    "outputs": [
@@ -279,6 +291,8 @@
     "scores = []\n",
     "scores_list = []\n",
     "nidx = []\n",
+    "nueroidx = []\n",
+    "layeridx = []\n",
     "\n",
     "l_range = range(1, 50, 10)\n",
     "neurons = [5,10,20,40,80,160]\n",
@@ -295,7 +309,21 @@
     "        \n",
     "        scores = r2_score(y_test,y_pred)\n",
     "        scores_list.append(r2_score(y_test,y_pred))\n",
+    "        nueroidx.append(neuron)\n",
+    "        layeridx.append(l)\n",
     "        nidx.append((l/10)+(neuron/160))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2c09b2eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_out_mlp = pd.DataFrame(data=[nidx,scores_list,nueroidx,layeridx])\n",
+    "df_out_mlp.head\n",
+    "df_out_mlp.to_csv('/Users/frank/Documents/classes/env.datascience_clayton/capstone/knn_out.csv') "
    ]
   },
   {
@@ -338,6 +366,9 @@
    "source": [
     "print(scores_list)\n",
     "print(nidx)\n",
+    "\n",
+    "\n",
+    "\n",
     "fig = plt.figure(figsize = (3,2), dpi = 300)\n",
     "plt.plot(nidx,scores_list)\n",
     "plt.title(\"MLPRegressor\")\n",
